# partyhat

./: TELEGRAM_NOTIFICATION.md
agents/: .env.example  AGENTIC_PIPELINE_REVIEW.md  API.md  NEXT_FRONTEND_INTEGRATION_PRD.md  PIPELINE_API.md  README.md  api.py  clear_agent_log.py  modal_foundry_app.py  pyproject.toml  sync_schema.py
agents/agents/: agent_registry.py  artifact_mutation_tools.py  audit_tools.py  code_storage.py  coding_tools.py  context.py  contract_identity.py  deployment_manifest.py  deployment_tools.py  memory_manager.py  modal_runtime.py  modal_volume_backend.py  pipeline_cancel.py  pipeline_context.py  pipeline_evaluations.py  pipeline_orchestrator.py  pipeline_runtime.py  pipeline_specs.py  pipeline_status.py  planning_agent.py  planning_tools.py  project_state.py  task_tools.py  telegram_service.py  testing_tools.py  tracing.py
agents/agents/db/: __init__.py  (+2 more)
agents/generated_contracts/: foundry.toml
agents/partyhat_mcp/: __init__.py  auth.py  server.py  tools.py
agents/schemas/: audit_schema.py  coding_schema.py  deployment_schema.py  plan_schema.py  testing_schema.py
agents/tests/: test_agent_registry_stream.py  test_agent_wiring.py  test_api_pipeline_metadata.py  test_artifact_mutation_tools.py  test_artifact_storage_async.py  test_contract_identity.py  test_db_resilience.py  test_deployment_manifest.py  test_foundry_runtime.py  test_letta_connection.py  test_memory_manager_compact_plan.py  test_pipeline_orchestrator.py  test_pipeline_runtime.py  test_plan_schema.py  test_planning_tools.py  test_task_tools.py  test_telegram_integration.py
(+3 files in other folders)
