[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "letta-client>=1.7.8",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
]
